# pyodb_0.1.0

./: CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml  setup.py
cmake/: CMakeLists.txt  odb_add_schema.cmake  odb_create_glue.cmake  odb_link_schemas.cmake
include/: alloc.h  bits.h  exceptions.h  info.h  lists.h  macros.h  magicwords.h  pcma_extern.h  privpub.h  pyspam.h
modules/: __init__.py  environment.py  exceptions.py  parser.py  version.py
odb/: CMakeLists.txt  README  VERSION.cmake
odb/cmake/: README  ecbuild_system.cmake  odb-import.cmake.in  odb_create_static_stub.cmake  odb_set_environment.cmake
odb/include/: cdrhook.h  cma_seek.h  cma_write.h  codb.h  dca.h  ecstdlib.h  fodb.h  fodbmp.h  fodbmp2.h  idx.h  ioassign.h  lzw.h  memmap.h  mr2d_hdr.h  mysql.h  newio.h  odb_ioprof.h  odb_macros.h  odbmd5.h  pcma.h  privpub.h  qtar.h  regcache.h  result.h  swapbytes.h
odb/share/: CMakeLists.txt
odb/share/odb/: an_depar.cmap  date.cmap  dir.cmap  fg_depar.cmap  modoro.cmap  obstype.cmap  oldwind.cmap  press.cmap  press_hpa.cmap  procid.cmap  ps.cmap  ps_hpa.cmap  rtablel_2047  rtablel_2063  rtablel_2095  rtablel_21023  rtablel_21151  rtablel_2127  rtablel_21279  rtablel_2159  rtablel_22047  rtablel_2215  rtablel_2255  rtablel_2319  rtablel_2399  rtablel_2511  rtablel_2639  rtablel_2799  stalt.cmap  status.cmap  t.cmap  t2m.cmap  target.cmap  tbr.cmap  tcelsius.cmap  tfahrenheit.cmap  time.cmap  tslot.cmap  wind.cmap
odb/share/odb/DUMMY/: DUMMY.IOASSIGN  DUMMY.dd  DUMMY.sch
odb/share/odb/cmake/: ecbuild_add_c_flags.cmake  ecbuild_bundle.cmake  odb-config-version.cmake  odb-config.cmake  odb-targets-relwithdebinfo.cmake  odb-targets.cmake  odb_generate_table_names.py
odb/src/: CMakeLists.txt
odb/src/aux/: CMakeLists.txt  binio.c  bits.c  cardinality.c  cma_attach.c  cma_bin_file.c  cma_bin_info.c  cma_byteswap.c  cma_close.c  cma_debug.c  cma_detach.c  cma_filesize.c  cma_flpcheck.c  cma_flperr.F90  cma_get_concat.c  cma_get_concat_byname.c  cma_get_ddrs.c  cma_get_report.c  cma_info.c  cma_is_packed.c  cma_on_mrfs.c  cma_open.c  cma_prt_stat.F90  cma_read.c  cma_readb.c  cma_readc.c  cma_readf.c  cma_readi.c  cma_rewind.c  cma_seek.c  cma_seekb.c  cma_seekf.c  cma_seeki.c  cma_stat.c  cma_wrapup.c  cma_write.c  cma_writeb.c  cma_writec.c  cma_writef.c  cma_writei.c  (+68 more)
odb/src/compiler/: CMakeLists.txt  cmd.c  copyfile.c  defines.c  genc.c  lex.l  list.c  odb98.c  regex.c  tree.c  yacc.y
odb/src/extras/: CMakeLists.txt
odb/src/extras/ec/: CMakeLists.txt  julian.h  julian_lib.c
odb/src/extras/emos/: CMakeLists.txt  bufrgrib.h  fileRead.h  fort2c.h  pbio.c  readprod.c  sizeRoutines.h
odb/src/extras/ifsaux/: CMakeLists.txt
odb/src/extras/ifsaux/include/: getstatm.h
odb/src/extras/ifsaux/module/: local_trafos.F90  mpl_allgatherv_mod.F90  mpl_allreduce_mod.F90  mpl_alltoallv_mod.F90  mpl_broadcast_mod.F90  mpl_gatherv_mod.F90  mpl_recv_mod.F90  mpl_send_mod.F90  parkind1.F90  yomabrt.F90  yomerrtrap.F90  yomgstats.F90
odb/src/extras/ifsaux/support/: dr_hook_util.F90  drhook.c  endian.c  my_sync.c
odb/src/extras/ifsaux/utilities/: get_num_threads.F90  iusrcl.F  jsort.F
odb/src/extras/mpi_serial/: CMakeLists.txt  mpi_buffer_attach.F  mpi_finalized.F  mpi_ibsend.F  mpi_ssend.F  mpif.h  tracecalls.c
odb/src/include/: CMakeLists.txt  alloc.h  cma_read.h  cmaio.h  codb_netcdf.h  defs.h  evaluate.h  fodbmp1.h  fodbutil.h  fortint.h  funcs.h  history.h  info.c  info.h  iostuff.h  node.h  odb.h  odbcrc.h  odbcs.h  odbcsdefs.h  odbcstags.h  odbdump.h  odbi.h  odbi_cs.h  odbi_direct.h  odbi_struct.h  result.c  setodbcs.h  static.h  symtab.h  vparam.h
odb/src/interface/: append_num.h  apply_poolmasking.h  bsslzr_odb.h  ckeysort.h  create_iomap.h  create_statid.h  fodb_checkviewreg.h  fwrite_iomap.h  gauaw_odb.h  iolockdb.h  lnkdb.h  lnkdb2.h  msgpass_loaddata.h  msgpass_loadobs.h  msgpass_storedata.h  msgpass_storeobs.h  rlnkdb.h  rlnkdb2.h  uniquenumdb.h
odb/src/lib/: CMakeLists.txt  Codb_set_entrypoint.c  Ctxprint.F90  Dummies.c  Dummyprofile_newio.c  add.c  ae_dump.c  aggr.c  alist.c  append_num.F90  apply_poolmasking.F90  bsslzr_odb.F90  ckeysort.F90  cmdbkeys.c  codb.c  codb_distribute.F90  codb_truename.c  cread_iomap.c  create_iomap.F90  create_statid.F90  ctransfer.c  ctx.c  datastream.F90  dynlink.c  eq_regions.c  errtrap.c  evaluate.c  fodb_checkviewreg.F90  fodb_propagate_env.F90  forfunc.c  funcs.c  fwrite_iomap.F90  gauaw_odb.F90  hashing.c  infile.c  init_region.c  inside.c  iolockdb.F90  lnkdb.F90  lnkdb2.F90  (+31 more)
odb/src/module/: CMakeLists.txt  odb.F90  odb_module.F90  odb_module8.F90  odbgetput.F90  odbio_msgpass.F90  odbiomap.F90  odbmap_reportype.F90  odbmp.F90  odbnetcdf.F90  odbprint.F90  odbshared.F90  odbsort.F90  odbstat.F90  odbutil.F90  stackdb.F90  str.F90
odb/src/scripts/: CMakeLists.txt  DEPRECATED  askodb  check_links  create_index  create_ioassign  create_odbglue  create_static_stubb  dcafix  dcafix.pl  dcagen  dcaquick  dd2ddl  ddl2flags.pl  latlonrad  makegp.ksh  newodb  odb1to4  odb2netcdf  odb4to1  odb_4to1  odbcc  odbclean  odbcomp  odbcompress  odbdiff  odbdump.ksh  odbf90  odbgnuplot  odbgunzip  odbi_proxy  odbi_show_server  odbi_start_server  odbi_stop_server  odblink  odbls  odbmerge  odbmore  odbprune  odbqsub  (+12 more)
odb/src/tools/: CMakeLists.txt  Create_index.F90  DEPRECATED  Fodbsql.F90  Fscheduler.F90  Odbcompress.F90  Odbdiff.F90  Odbgnuplot.F90  Odbless.F90  b4.c  dcagen.c  dd2ddl.c  dump_main.c  hcat.c  ioassign.c  mr2d_create.c  mr2d_split.c  mysort.c  odb2rgg.c  odbcksum.c  odbdump_main.c  odbfiletime.c  odbi_client_main.c  odbi_direct_main.c  odbi_host.c  odbi_server_main.c  odbmd5sum.c  odbversion.c  pcma_main.c  qtar.c  scheduler.c  typebits.c  world2odb.c
pycc/: CMakeLists.txt  dca_module.c  info_module.c  init_module.c  io_module.c  odb_tables  pyodb_module.c  pyodb_module_old.c
pycc/pyodb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sql/: ccma_view.sql  ccma_view_radar.sql  ecma_view.sql  obsmon_conv.sql
tests/: call_odb_example.py  odb_plotter.py  test_import.py
(+888 files in other folders)
